--- a/index_backup.html
+++ b/index_backup.html
@@ -34,7 +34,7 @@
         <div class="card-body">
           <h2 class="h5 text-primary mb-3">View User Dashboard</h2>
           <div class="input-group">
-            <select id="userSelect" class="form-select">
+            <select id="dashboardSelect" class="form-select">
               <option value="">-- Select User --</option>
             </select>
             <button
@@ -111,10 +111,10 @@
               </div>
             </div>
 
-            <div class="mb-3">
+            <!-- <div class="mb-3">
               <label for="dateOut" class="form-label">Date</label>
               <input type="date" class="form-control" id="dateOut" required />
-            </div>
+            </div> -->
             <button type="submit" id="submitButton" class="btn btn-danger">
               Send Money
             </button>
@@ -230,13 +230,22 @@
       }
 
       function populateUserOptions(users) {
-        const defaultOption = `<option value="">-- Select User --</option>`;
-        userSelectInput.innerHTML = defaultOption;
+  const defaultOption = `<option value="">-- Select User --</option>`;
 
-        users.forEach((u) => {
-          userSelectInput.innerHTML += `<option value="${u.email}">${u.name} (${u.email})</option>`;
-        });
-      }
+  // Dashboard dropdown
+  const dashboardSelect = document.getElementById("dashboardSelect");
+  dashboardSelect.innerHTML = defaultOption;
+  users.forEach(u => {
+    dashboardSelect.innerHTML += `<option value="${u.email}">${u.name} (${u.email})</option>`;
+  });
+
+  // Form dropdown
+  const userSelectInput = document.getElementById("receiverOut");
+  userSelectInput.innerHTML = defaultOption;
+  users.forEach(u => {
+    userSelectInput.innerHTML += `<option value="${u.email}">${u.name} (${u.email})</option>`;
+  });
+}
 
       function renderTransactions(transactions) {
         const table = document.getElementById("transactionTable");
@@ -330,88 +339,82 @@
 
       // Form submission
       transactionForm.onsubmit = async (e) => {
-        e.preventDefault();
-        const payload = {
-          type: currentTransactionType,
-          amount: amountInput.value,
-          user: userSelectInput.value,
-          date: dateInput.value,
-        };
+  e.preventDefault();
 
-        try {
-          const response = await fetch(`${API_BASE_URL}/transactions`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify(payload),
-          });
+  const selectedEmail = userSelectInput.value;
+  const selectedAmount = amountInput.value;
+  // const selectedDate = dateInput.value;
+  const selectedDate = new Date().toISOString().split("T")[0]; 
 
-          if (response.ok) {
-            showToast(
-              `✅ ${
-                currentTransactionType === "In" ? "Money In" : "Money Out"
-              } recorded!`
-            );
-            fetchDataAndRender();
-            transactionForm.reset();
 
-            // --- WhatsApp link ---
-            const userObj = allUsers.find(
-              (u) => u.email === userSelectInput.value
-            );
-            if (userObj && userObj.whatsapp) {
-              const message = `Hi ${
-                userObj.name
-              },%0A%0AA new transaction was recorded:%0AType: ${
-                currentTransactionType === "In"
-                  ? "Money Received"
-                  : "Money Sent"
-              }%0AAmount: ₹${amountInput.value}%0ADate: ${
-                dateInput.value
-              }%0A%0ATotal Received: ₹${summaryReceived.textContent.replace(
-                "₹ ",
-                ""
-              )}%0ATotal Sent: ₹${summarySent.textContent.replace(
-                "₹ ",
-                ""
-              )}%0ABalance: ₹${summaryBalance.textContent.replace(
-                "₹ ",
-                ""
-              )}%0A%0AThank you for using Money Transfer Tracker!`;
-              const whatsappLink = `https://api.whatsapp.com/send?phone=${userObj.whatsapp.replace(
-                /\D/g,
-                ""
-              )}&text=${message}`;
-              window.open(whatsappLink, "_blank");
-            } else {
-              console.log(
-                "❌ WhatsApp number missing for user:",
-                userObj ? userObj.name : userSelectInput.value
-              ); // ✅ log error
-              showToast(
-                "❌ WhatsApp number not available for this user.",
-                "danger"
-              );
-            }
+  const payload = {
+    type: currentTransactionType,
+    amount: selectedAmount,
+    user: selectedEmail,
+    date: selectedDate,
+  };
 
-            // Refresh summary
-            updateTransactionSummary(userSelectInput.value);
-          } else {
-            showToast("❌ Failed to record transaction", "danger");
-          }
-        } catch (err) {
-          console.error(err);
-          showToast("❌ Failed to connect to server", "danger");
+  try {
+    const response = await fetch(`${API_BASE_URL}/transactions`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(payload),
+    });
+
+    if (response.ok) {
+      showToast(
+        `✅ ${currentTransactionType === "In" ? "Money In" : "Money Out"} recorded!`
+      );
+
+      // ✅ Refresh data first so summaries update
+      await fetchDataAndRender();
+      await updateTransactionSummary(selectedEmail);
+
+      // ✅ Now read the updated totals
+      const totalReceived = summaryReceived.textContent.replace("₹ ", "");
+      const totalSent = summarySent.textContent.replace("₹ ", "");
+      const balance = summaryBalance.textContent.replace("₹ ", "");
+
+      // Reset form
+      transactionForm.reset();
+
+      // --- WhatsApp link ---
+      const userObj = allUsers.find((u) => u.email === selectedEmail);
+      if (userObj && userObj.whatsapp) {
+        const message = `Hi ${userObj.name},%0A%0AA new transaction was recorded:%0AType: ${
+          currentTransactionType === "In" ? "Money Received" : "Money Sent"
         }
-      };
+          %0AAmount: ₹${selectedAmount}%0ADate: ${selectedDate}%0A%0ATotal Received: ₹${totalReceived}%0ATotal Sent: ₹${totalSent}%0APending: ₹${balance}%0A%0AThank you for using Money Transfer Tracker!`;
+
+        const whatsappLink = `https://api.whatsapp.com/send?phone=${userObj.whatsapp.replace(
+          /\D/g,
+          ""
+        )}&text=${message}`;
+        window.open(whatsappLink, "_blank");
+      } else {
+        console.log(
+          "❌ WhatsApp number missing for user:",
+          userObj ? userObj.name : selectedEmail
+        );
+        showToast("❌ WhatsApp number not available for this user.", "danger");
+      }
+    } else {
+      showToast("❌ Failed to record transaction", "danger");
+    }
+  } catch (err) {
+    console.error(err);
+    showToast("❌ Failed to connect to server", "danger");
+  }
+};
 
       function openUserDashboard() {
-        const userIndex = userSelectInput.value;
-        if (userIndex === "") {
-          showToast("Please select a user first!", "warning");
-          return;
-        }
-        window.location.href = `user.html?user=${userIndex}`;
-      }
+  const email = document.getElementById("dashboardSelect").value;
+  if (!email) {
+    showToast("Please select a user first!", "warning");
+    return;
+  }
+  window.location.href = `user.html?user=${email}`;
+}
 
       // Initialize
       document.addEventListener("DOMContentLoaded", () => {
