--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -142,6 +142,7 @@
             const data = await res.json();
 
             if (data.success) {
+              localStorage.setItem("loggedInOwner", data.owner);
               messageEl.textContent = "✅ Login successful! Redirecting...";
               messageEl.classList.remove('text-red-400');
               messageEl.classList.add('text-green-300');
