--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,14 @@
     <header class="bg-primary text-white text-center py-4 mb-4">
       <div class="container d-flex justify-content-between align-items-center">
         <h1 class="h3 mb-0">Money Transfer Tracker Dashboard</h1>
-        <a href="register.html" class="btn btn-warning fw-bold"
-          >➕ Register User</a
-        >
+        <div class="d-flex gap-2">
+          <a href="register.html" class="btn btn-warning fw-bold"
+            >➕ Register User</a
+          >
+          <button id="logoutBtn" class="btn btn-danger fw-bold">
+            🚪 Logout
+          </button>
+        </div>
       </div>
     </header>
 
@@ -428,6 +433,11 @@
       // Initialize
       document.addEventListener("DOMContentLoaded", () => {
         fetchDataAndRender();
+      });
+      // Logout button functionality
+      document.getElementById("logoutBtn").addEventListener("click", () => {
+        localStorage.removeItem("loggedInOwner"); // remove owner info
+        window.location.href = "loginPage.html"; // redirect to login page
       });
     </script>
   </body>
