--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       <div class="container d-flex justify-content-between align-items-center">
         <h1 class="h3 mb-0">Money Transfer Tracker Dashboard</h1>
         <div class="d-flex gap-2">
+          <a href="index_night.html" class="btn btn-dark fw-bold">🌙 Night Mode</a>
           <a href="register.html" class="btn btn-warning fw-bold"
             >➕ Register User</a
           >
