--- a/public/index_night.html
+++ b/public/index_night.html
@@ -135,7 +135,7 @@
             </h1>
             <div class="d-flex gap-2">
                 <a href="index.html" class="btn btn-outline-light fw-bold">🌞 Day Mode</a>
-                <a href="register.html" class="btn btn-outline-warning fw-bold d-flex align-items-center gap-2">
+                <a href="register_night.html" class="btn btn-outline-warning fw-bold d-flex align-items-center gap-2">
                     <i class="bi bi-person-plus-fill"></i><span class="d-none d-md-inline">Register User</span>
                 </a>
                 <button id="logoutBtn" class="btn btn-outline-danger fw-bold d-flex align-items-center gap-2">
