Last update for 30Aug all files works

--- a/public/loginPage.html
+++ b/public/loginPage.html
@@ -155,13 +155,15 @@
 
         <p id="message" class="text-red-400 text-center text-sm mt-4 font-medium" role="alert"></p>
 
-        <p class="text-center text-sm text-gray-300 mt-8 leading-relaxed">
+        <p class="text-center text-sm text-gray-300 mt-8 leading-relaxed tracking-wide">
     Powered by
     <span class="font-semibold"><b>Vijay's Software Solutions</b></span>
 </p>
 <p class="text-center text-base text-gray-300 mt-4 leading-relaxed">
     Don't have an account?
-    <a href="signup.html" class="text-indigo-400 font-semibold hover:underline">Create one</a>
+    <a href="signup.html" class="text-indigo-400 font-semibold hover:underline hover:text-indigo-300 transition">
+    Create one
+</a>
 </p>
     </div>
 
